--- a/src/app/ex5/default-image-viewer/default-image-viewer.component.html
+++ b/src/app/ex5/default-image-viewer/default-image-viewer.component.html
@@ -1,8 +1,15 @@
 <div class="row">
-    <div class="col-md-5">
-        <input type="text" name="imagePath" [(ngModel)]="imagePath" />
-    </div>
-    <div class="col-md-7">
-        <img [src]="imagePath | defaultImage" width="200" />
+    <div class="col-md-8 offset-md-2 text-center">
+        <input type="text" class="form-control" placeholder="My image path" name="imagePath"  [(ngModel)]="imagePath">
+        <div class="flex-row d-flex justify-content-center m-4">
+            <button (click)="changePicture()"
+                    class="btn btn-primary">Change to an image</button>
+            <button (click)="resetPicture()"
+                    class="btn-outline-primary btn ml-2">Clear image</button>
+        </div>
+
+        <br/>
+
+        <img [src]="imagePath | defaultImage" width="400" />
     </div>
 </div>
